@@ -1563,3 +1563,30 @@ val
        (bytevector-copy! b 0 b 3 4)
        b))
 (#vu8(1 2 3 4) (bytevector-copy #vu8(1 2 3 4)))
+(255 (bytevector-u8-ref #vu8(255) 0))
+(255 (bytevector-u8-ref (make-bytevector 1 -1) 0))
+(255 (bytevector-u8-ref (make-bytevector 1 255) 0))
+(255 (let ([bytevector (make-bytevector 1)])
+       (bytevector-fill! bytevector -1)
+       (bytevector-u8-ref  bytevector 0)))
+(-1 (bytevector-s8-ref #vu8(255) 0))
+(-1 (bytevector-s8-ref (make-bytevector 1 -1) 0))
+(-1 (bytevector-s8-ref (make-bytevector 1 255) 0))
+(-1 (let ([bytevector (make-bytevector 1)])
+       (bytevector-fill! bytevector -1)
+       (bytevector-s8-ref  bytevector 0)))
+(255 (let ([b (make-bytevector 1)])
+       (bytevector-u8-set! b 0 255)
+       (bytevector-u8-ref b 0)))
+(255 (let ([b (make-bytevector 1)])
+       (bytevector-s8-set! b 0 -1)
+       (bytevector-u8-ref b 0)))
+(error (bytevector-u8-ref 1 (make-bytevector 1)))
+(error (bytevector-s8-ref 1 (make-bytevector 1)))
+(error (bytevector-u8-ref -1 (make-bytevector 1)))
+(error (bytevector-s8-ref -1 (make-bytevector 1)))
+(error (bytevector-u8-set! 1 (make-bytevector 1)) 1)
+(error (bytevector-s8-set! 1 (make-bytevector 1)) 1)
+(error (bytevector-u8-set! -1 (make-bytevector 1)) 1)
+(error (bytevector-s8-set! -1 (make-bytevector 1)) 1)
+
