@@ -4,6 +4,7 @@
                                    (bytevectorFillDEx): Added bytevector-fill!.
                                    (bytevectorCopyDEx): Added bytevector-copy!.
                                    (bytevectorCopyEx): Added bytevector-copy.
+                                   : Added bytevector-u8-set!, bytevector-u8-ref, bytevector-s8-ref and bytevector-s8-set!.
 
         * ByteVector.h (equal): Added.
 
